# auth

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MSA_INTEGRATION.md  README.md  backup.sh  docker-compose.dev.yaml  docker-compose.yaml  nginx.conf  restore.sh  run.sh  stop.sh
.claude/: settings.json
.github/workflows/: docker-publish.yml
src/: config.rs  error.rs  lib.rs  main.rs  security.rs  state.rs
src/entities/: mod.rs  refresh_token.rs  user.rs  user_group.rs  user_group_user.rs
src/http/: dto.rs  handlers.rs  middleware.rs  mod.rs  openapi.rs
src/migrations/: m20260418_000001_init.rs  m20260418_000001_init.sql  mod.rs
tests/: backup_restore.rs  http_api.rs
tests/common/: mod.rs
