[package]
name = "auth_rs"
version = "0.1.0"
edition = "2021"
authors = ["Junnoh Lee <pluruel@gmail.com>"]
description = "Rust port of the auth service (axum + SeaORM)"

[[bin]]
name = "auth_rs"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# --- web ---
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# --- db / orm ---
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }

# --- serde / types ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- auth / crypto ---
jsonwebtoken = "9"
bcrypt = "0.15"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
pkcs8 = { version = "0.10", features = ["pem"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"

# --- config / runtime plumbing ---
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
